Integrated s3 with froala and changed Meteor.settings s3Config

--- a/client/views/admin/edit.html
+++ b/client/views/admin/edit.html
@@ -52,7 +52,7 @@
                 <div class="col-md-12">
                   <label>Body</label>
                   <!--textarea class="col-xs-12"></textarea-->
-                  {{> froalaReactive buttons=froalaButtons height=300 theme="dark" inlineMode=false}}
+                  {{> froalaReactive buttons=froalaButtons height=300 theme="dark" inlineMode=false imageUploadToS3=froalaS3Config}}
                 </div>
               </div>
               <div class="row form-group">
