--- a/client/views/blog/show.html
+++ b/client/views/blog/show.html
@@ -5,7 +5,7 @@
     {{/if}}
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-11 col-md-8 col-md-offset-2">
+        <div class="col-xs-12 col-sm-12 col-md-12">
           {{> blogShowBody}}
         </div>
       </div>
