Added commenting under blog posts.

--- a/client/views/admin/edit.html
+++ b/client/views/admin/edit.html
@@ -28,13 +28,13 @@
                   {{#if featuredImage}}
                     &nbsp;<a href="#" data-action="delete-featured"><i class="fa fa-trash-o"></i></a>
                   {{/if}}
-                  <p class="help-block">
+                  <!--p class="help-block">
                     <div class="checkbox">
                       <label for="background-title">
                         <input type="checkbox" name="background-title" checked="{{#if titleBackground}}checked{{/if}}"> Use as background for title
                       </label>
                     </div>
-                  </p>
+                  </p-->
                 </div>
               </div>
               <div class="row form-group">
