--- a/client/views/blog/show.html
+++ b/client/views/blog/show.html
@@ -1,12 +1,17 @@
 <template name="blogShow">
   <div id="meteor-blog" class="blog-single">
-    {{#if session "postHasFeaturedImage"}}
-      {{> blogShowFeaturedImage}}
-    {{/if}}
+    <!-- {{#if session "postHasFeaturedImage"}}
+      {{> blogShowFeaturedImageTemplate}}
+    {{/if}} -->
     <div class="container">
       <div class="row">
-        <div class="col-xs-12 col-sm-12 col-md-12">
+        <div class="col-xs-12 col-md-12">
           {{> blogShowBody}}
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12 col-md-12">
+          {{> blogComments this}}
         </div>
       </div>
     </div>
@@ -16,65 +21,125 @@
 <template name="blogShowBody">
   <article class="post">
     {{#unless titleBackground}}
-      <h1 class="mb-title text-center">
+      <h2 class="mb-title text-center" style="font-size: 28px;">
         {{title}}
-      </h1>
+      </h2>
       <div class="post-meta text-center">
-        {{#if isAdmin}}
-           <small><a href="#" id="edit-post">edit</a></small>
-           --
+        By {{authorName}} on {{formatDate publishedAt "blog"}}
+        {{#if tags}}
+        <ul class="list-inline" style="margin-top: 5px;">
+          {{#each tags}}
+          <li class="btn btn-xs btn-default" style="margin-right: 5px;">
+            <i class="fa fa-tags"></i>
+            {{this}}
+          </li>
+          {{/each}}
+        </ul>
         {{/if}}
-        By {{authorName}} on {{blogFormatDate publishedAt}}
-        {{> blogTags }}
       </div>
     {{/unless}}
     <div id="commentable-area" class="the-content">
-      {{{html}}}
+      {{{chatMessageFilters html}}}
     </div>
   </article>
   <div class="blog-back-link pull-left">
     <a href="{{pathFor 'blogIndex'}}"><i class="fa fa-caret-left"></i>Back to the Blog</a>
   </div>
-  {{> shareit shareData}}
-  {{> disqus this}}
 </template>
 
 <template name="blogShowFeaturedImage">
-  <div class="row">
-    <div class="mb-featured-image-container">
-      <figure class="{{#if session 'fullWidthFeaturedImage'}}mb-fillWidthImage{{else}}mb-scaleImage{{/if}}">
-        <div class="mg-aspectRatioPlaceholder" style="{{#unless session 'fullWidthFeaturedImage'}}width: {{featuredImageWidth}}px; height: {{featuredImageHeight}}px;{{/unless}}">
-          <!-- <div class="mb-aspect-ratio-fill"></div> -->
-          <img src="{{featuredImage}}" alt="" class="img-responsive center-block">
-          {{#if titleBackground}}
-            <div class="mb-background-title">
-              <div class="container">
-                <div class="row">
-                  <div class="center-block">
-                    <h1 class="text-center">
-                      {{title}}
-                      {{#if isAdmin}}
-                         <small><a href="#" id="edit-post">edit</a></small>
-                      {{/if}}
-                    </h1>
-                    <div class="post-meta text-center">
-                      By {{authorName}} on {{blogFormatDate publishedAt}}
-                      {{> blogTags }}
-                    </div>
+  <div class="mb-featured-image-container">
+    <figure class="{{#if session 'fullWidthFeaturedImage'}}mb-fillWidthImage{{else}}mb-scaleImage{{/if}}">
+      <div class="mg-aspectRatioPlaceholder">
+        <!-- <div class="mb-aspect-ratio-fill"></div> -->
+        <img src="{{featuredImage}}" alt="" class="img-responsive center-block" style="max-width: 500px;">
+        {{#if titleBackground}}
+          <div class="mb-background-title">
+            <div class="container">
+              <div class="row">
+                <div class="center-block">
+                  <h2 class="text-center" style="font-size: 28px;">
+                    {{title}}
+                    {{#if isAdmin}}
+                       <small><a href="#" id="edit-post">edit</a></small>
+                    {{/if}}
+                  </h2>
+                  <div class="post-meta text-center">
+                    By {{authorName}} on {{blogFormatDate publishedAt}}
+                    {{#if tags}}
+                    <ul class="list-inline" style="margin-top: 5px;">
+                      {{#each tags}}
+                      <li class="btn btn-xs btn-default" style="margin-right: 5px;">
+                        <i class="fa.fa-tags"></i>
+                        {{this}}
+                      </li>
+                      {{/each}}
+                    </ul>
+                    {{/if}}
                   </div>
                 </div>
               </div>
             </div>
-          {{/if}}
-        </div>
-      </figure>
-    </div>
+          </div>
+        {{/if}}
+      </div>
+    </figure>
   </div>
 </template>
+
 <template name="disqus">
   {{#if useDisqus}}
     <div id="disqus_thread"></div>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
   {{/if}}
+</template>
+
+<template name="blogComments">
+  <div class="clearfix"></div>  
+  <hr>
+  <ul class="list-unstyled chat-room-messages animated-container">
+  {{#each commentsSorted}}
+    {{> UI.dynamic template="blogCommentItem"}}
+  {{/each}}
+  </ul>
+  <h2>Leave a comment</h2>
+  <hr>
+  <form>
+    {{> froalaReactive buttons=froalaButtons height=150 theme="dark" inlineMode=false imageUploadToS3=froalaS3Config}}
+    <div class="margin-top-10">
+      <button class="btn btn-lg btn-primary pull-right" type="submit">Post</button>
+    </div>
+  </form>
+</template>
+
+<template name="blogCommentItem">
+  <li class="chatMessageItem {{userOnlineClass userId}}">
+    <div>
+      <div class="pull-left" style="clear:both; margin-right: 4px;">
+        <a href="{{ pathFor 'userProfile' _id=userId}}"><img src="{{userAvatar userId=userId}}" width="40" height="40" class="img-rounded"></a>
+      </div>
+      <span class="hide-on-hover">
+        <strong>{{author.username}}</strong>
+        <span class="timestamp pull-right">{{formatDate createdAt "chat"}}</span>
+      </span>
+      <span class="show-on-hover">
+        <div class="btn-group">
+          <button class="btn btn-xs btn-default dropdown-toggle" type="button" data-toggle="dropdown">
+            <strong>{{author.username}}</strong>&nbsp;<i class="fa fa-caret-down"></i>
+          </button>
+          <ul class="dropdown-menu" role="menu">
+            <li><a href="{{ pathFor 'userProfile' _id=userId}}"><i class="fa fa-user"></i>&nbsp;View Profile</a></li>
+            <li><a href="{{ pathFor 'privateMessagesCompose' }}?user={{author.username}}"><i class="fa fa-pencil"></i>&nbsp;Send Private Message</a></li>
+            {{#if isAdmin}}
+              <li><a href="#" class="removeMessage" data-message-id="{{_id}}"><i class="fa fa-ban"></i>&nbsp;Remove Message</a></li>
+            {{/if}}
+            <!--li><a href="#"><i class="fa fa-ban"></i>&nbsp;Block User</a></li-->
+          </ul>
+        </div>
+        <span class="timestamp pull-right">{{formatDate createdAt "chat"}}</span>
+      </span>
+    </div>
+    <div class="chatMessageBody" style="margin-left: 45px;"><span>{{{parseEmoticons body}}}</span></div>
+  </li>
 </template>
